# mpc_allocator_cpp

./: .coveralls.yml  .travis.yml  CMakeLists.txt  Chunk.cpp  Chunk.h  Common.h  DEPENDENCIES.txt  DoubleLinkList.h  DoubleLinkList_impl.h  Doxyfile  README.md  StdPool.cpp  StdPool.h  configure  main.cpp
cmake/: FindGMock.cmake  FindHwloc.cmake  FindLibdl.cmake  FindOpenPA.cmake  check-deps.cmake  cpack-options.cmake  enable-options.cmake  macros.cmake  unittest-macros.cmake  user-options.cmake
common/: Common.h  DoubleLinkList.h  DoubleLinkList_impl.h  IAllocator.h  OSLinux.cpp  OSLinux.h  RegionRegistry.cpp  RegionRegistry.h  Spinlock.cpp  Spinlock.h
dev-scripts/: gitlab-ci-valid.sh  jsontodot.py
medium/: MediumAllocator.cpp  MediumAllocator.h  MediumChunk.cpp  MediumChunk.h  MediumFreePool.cpp  MediumFreePool.h
mmsource/: CMakeLists.txt  DummyMMSource.h
src/: CMakeLists.txt
src/benchs/: CMakeLists.txt
src/benchs/locklessinc.com/: CMakeLists.txt  run.sh.cmake  run.sh.in  t-test1.c
src/chunks/: CMakeLists.txt  MediumAllocator.cpp  MediumAllocator.h  MediumChunk.cpp  MediumChunk.h  SmallAllocator.cpp  SmallChunkAllocator.cpp  SmallChunkAllocator.h  SmallChunkRun.cpp  SmallChunkRun.h
src/common/: AtomicPtr.h  CMakeLists.txt  Common.h  Debug.cpp  Debug.h  DoubleLinkList.h  DoubleLinkList_impl.h  IDoubleLinkListElement.h  OS.h  OSLinux.cpp  OSLinux.h  RegionRegistry.cpp  Spinlock.cpp  Spinlock.h  TopoObject.h
src/json/: CMakeLists.txt  JsonState.h  TypeToJson.h
src/lib/: CMakeLists.txt  mpc_allocator.h
src/lib/chunks/: CMakeLists.txt  HugeAllocator.cpp  HugeAllocator.h  MediumAllocator.cpp  MediumAllocator.h  MediumChunk.cpp  MediumChunk.h  MediumFreePool.cpp  MediumFreePool.h  PaddedChunk.cpp  PaddedChunk.h  PaddedChunk_inline.h  SmallAllocator.cpp  SmallAllocator.h  SmallChunkRun.cpp  SmallChunkRun.h  SmallRunContainer.cpp  SmallRunContainer.h
src/lib/common/: AtomicPtr.h  AtomicPtr_impl.h  CMakeLists.txt  Common.cpp  Common.h  Debug.cpp  Debug.h  DoubleLinkList.h  DoubleLinkList_impl.h  IAllocator.h  IDoubleLinkListElement.h  MPSCFQueue.cpp  MPSCFQueue.h  RDTSC.h  RegionRegistry.cpp  RegionRegistry.h  Spinlock.cpp  Spinlock.h  Spinlock_inline.h  SymbolVisibility.h  TopoObject.h
src/lib/json/: CMakeLists.txt  TypeToJson.cpp
src/lib/mmsource/: CMakeLists.txt  CachedMMSource.cpp  CachedMMSource.h  CachedMMSourceNUMA.cpp  CachedMMSourceNUMA.h  DummyMMSource.cpp  DummyMMSource.h
src/lib/portability/: Atomics.h  AtomicsGCCIntr.h  AtomicsOpenPA.h  CMakeLists.txt  Locks.h  LocksPthread.h  OS.h  OSLinux.cpp  OSLinux.h  Topo.h  TopoHwloc.cpp  TopoHwloc.h
src/lib/posix/: AllocTraceStruct.h  CMakeLists.txt  PosixAllocator.cpp  PosixAllocator.h  PosixAllocatorDebugTrace.cpp  PosixAllocatorDebugTrace.h  PosixAllocatorFileTrace.cpp  PosixAllocatorFileTrace.h  PosixAllocatorLocal.cpp  PosixAllocatorLocal.h  PosixAllocatorNUMA.cpp  PosixAllocatorNUMA.h  PosixAllocatorStd.cpp  PosixAllocatorStd.h  PosixExport.cpp
src/mmsource/: CMakeLists.txt  DummyMMSource.cpp  DummyMMSource.h
src/portability/: Atomics.h  AtomicsOpenPA.h  CMakeLists.txt  Locks.h  LocksPthread.h  OS.h  OSLinux.cpp  OSLinux.h  Topo.h  TopoHwloc.cpp  TopoHwloc.h
src/portability/linux/: Atomics.h  CMakeLists.txt  Locks.h  OS.cpp  OS.h
src/posix/: AllocTraceStruct.h  CMakeLists.txt  PosixAllocator.cpp  PosixAllocator.h  PosixAllocatorDebugTrace.cpp  PosixAllocatorDebugTrace.h  PosixAllocatorFileTrace.cpp  PosixAllocatorFileTrace.h  PosixAllocatorStd.cpp  PosixExport.cpp
src/tests/: CMakeLists.txt  TestAtomicPtr.cpp  TestCachedMMSource.cpp  TestCommon.cpp  TestDummyMMSource.cpp  TestHugeAllocator.cpp  TestLinkList.cpp  TestMPSCFQueue.cpp  TestMediumAllocator.cpp  TestMediumChunk.cpp  TestMediumFreePool.cpp  TestOS.cpp  TestPaddedChunk.cpp  TestPosixAllocator.cpp  TestRegionRegistry.cpp  TestSmallAllocator.cpp  TestSmallChunk.cpp  TestSmallRunContainer.cpp  TestSpinlock.cpp
src/tests/mocks/: MockAllocator.h  MockChunkManager.h  MockMMSource.h
src/tools/: BugReproducer.cpp  BugReproducer.h  CMakeLists.txt  CollisionChecker.cpp  CollisionChecker.h  EventDispatch.cpp  EventDispatch.h  EventDispatchPrint.cpp  EventDispatchPrint.h  EventDispatchReplay.cpp  EventDispatchReplay.h  TraceReader.cpp  TraceReader.h  reader.cpp  replay.cpp  reproduce.cpp
tests/: CMakeLists.txt  TestChunk.cpp  TestCommon.cpp  TestDummyMMSource.cpp  TestLinkList.cpp  TestMediumAllocator.cpp  TestMediumChunk.cpp  TestMediumFreePool.cpp  TestOS.cpp  TestRegionRegistry.cpp  TestSpinlock.cpp
