include_directories(${GTEST_INCLUDE_DIRS})
FIND_PACKAGE( OpenMP REQUIRED)
set(TEST_LIST TestLinkList TestMediumChunk TestSpinlock TestMediumFreePool)

if(OPENMP_FOUND)
	message("OPENMP FOUND")
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS} -DHAVE_OPENMP")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} -DHAVE_OPENMP")
	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

FOREACH(test ${TEST_LIST})
	add_executable(${test} ${test}.cpp)
	target_link_libraries(${test} alloc ${GTEST_BOTH_LIBRARIES})
ENDFOREACH(test ${TEST_LIST})